src/objects/loan__Investor_Loan_Account_Txns__c.object
<CustomObject>
    <fields>
        <fullName>loan__ACH_Filename__c</fullName>
        <label>ACH Filename</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Balance_After__c</fullName>
        <label>Balance After</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Charged_Off_Date__c</fullName>
        <description>Investment Order charged off date.</description>
        <label>Charged Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Charged_Off_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Charged Off fees for an investment order.</description>
        <label>Charged Off Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Charged_Off_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Charged Off Interest for an Investment Order.</description>
        <label>Charged Off Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Charged_Off_Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Charged off principal for Investment Order</description>
        <label>Charged Off Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__GL_Post_Date__c</fullName>
        <label>GL Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Accrual_On_Prin_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This field will show on what amount interest has been calculated.</description>
        <label>Interest Accrual Prin Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Accrual_To_Date__c</fullName>
        <description>Interest accrual Done till date</description>
        <label>Interest Accrual To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Accrued_Amount__c</fullName>
        <description>Calculated Interest Accrued amount as on Payout date.</description>
        <label>Interest Accrued Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Paid__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Payment made towards Interest portion</description>
        <label>Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Service_Charge__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Service charge calculated on the interest Payout amount.</description>
        <label>Interest Service Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_accrual_from_Date__c</fullName>
        <description>At the time of this transaction, Interest accrual is done from, this is for the informational purpose.</description>
        <label>Interest Accrual From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Investor_Loan__c</fullName>
        <label>Investment Order</label>
        <referenceTo>loan__Investor_Loan__c</referenceTo>
        <relationshipLabel>Investor Loan Transactions</relationshipLabel>
        <relationshipName>Investor_Loan_Txns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Investor_NameDELETE__c</fullName>
        <formula>loan__Investor_Loan__r.loan__Account__r.Name</formula>
        <label>Investor NameDELETE (Deprecated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Late_Fee_Service_Charge__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Service Charge on the payout of late fees</description>
        <label>Late Fee Service Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Late_Fees_Paid__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Payment made towards fees.</description>
        <inlineHelpText>Payment made towards fees.</inlineHelpText>
        <label>Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Payment_Transaction_Time__c</fullName>
        <description>Time stamp of Loan Payment Transaction. Investor Transactions must be reversed in order starting from last investor payment created. We use this field to detect which Investor Transaction to reverse first.</description>
        <label>Loan Payment Transaction Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Payment_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Payment Transaction</label>
        <referenceTo>loan__Loan_Payment_Transaction__c</referenceTo>
        <relationshipLabel>Investor Loan Transactions</relationshipLabel>
        <relationshipName>Investor_Loan_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__New_Certificate_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>New Certificate rate after this txn posting.</description>
        <label>New Certificate Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__New_Service_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>New Service Rate After this txn posting</description>
        <label>New Service Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Old_Certificate_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Certificate Rate before this txn posting.</description>
        <label>Old Certificate Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Old_Service_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Service Rate, before this txn posting.</description>
        <label>Old Service Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Mode__c</fullName>
        <formula>loan__Loan_Payment_Transaction__r.loan__Payment_Mode__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Post_Date__c</fullName>
        <label>Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Principal_Paid__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Payment made towards Principal amount</description>
        <label>Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Principal_Service_Charge__c</fullName>
        <label>Principal Service Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Reason__c</fullName>
        <label>Reason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Reinvest_Interest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reinvest Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Reinvest_Principal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Investment order setting track field</description>
        <label>Reinvest Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__SS_Approval_Date__c</fullName>
        <label>Approval Date Snapshot</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__SS_Certificate_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The certificate rate for this investment. This is the rate which will be payable to the investor who buys invested in this loan and is entitled to its receivable stream.</description>
        <label>Certificate Rate Snapshot</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__SS_Enabled_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>snapshot field</description>
        <label>Snapshot Enabled Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__SS_Interest_Amount_Paid__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total Interest Amount paid on this investment.</description>
        <label>Interest Amount Paid Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__SS_Interest_Paid__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Payment made towards Interest portion</description>
        <label>Interest Paid Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__SS_Interest_Rate_On_Loan_Account__c</fullName>
        <description>Interest Rate On Loan account</description>
        <label>Interest Rate On Loan Snapshot</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__SS_Inv_Accrued_Interest_Amt__c</fullName>
        <description>Payable Accrued Interest amount to investor</description>
        <inlineHelpText>Payable Accrued Interest amount to investor</inlineHelpText>
        <label>Accrued Interest Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__SS_Inv_Interest_Posted_Amt__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total Interest Posted on account, this will be updated when the payment amount is being calculated.</description>
        <label>Interest Balance Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__SS_Inv_Last_Interest_Accrual_Post_Date__c</fullName>
        <description>Last Interest accrual Posted</description>
        <label>Last Interest Accrual Date Snapshot</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__SS_Investment_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Investment Amount Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__SS_Investor_End_Date__c</fullName>
        <label>End Date Snapshot</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__SS_Investor_Start_Date__c</fullName>
        <description>Start date of the Investor</description>
        <label>Start Date Snapshot</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__SS_Late_Fees_Amount_Paid__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total Late Fees Paid on this account.</description>
        <label>Late Fees Amount Paid Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__SS_Loan_Delinquent_Days__c</fullName>
        <description>Number_of_Days_Overdue__c on loan account</description>
        <label>Loan Delinquent Days Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__SS_Loan_Principal_Remaining__c</fullName>
        <label>Loan Principal Remaining Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__SS_Loan_Status__c</fullName>
        <description>Loan_Status__c on loan account</description>
        <label>Loan Status Snapshot</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__SS_Principal_Amount_Paid__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total Principal Amount Paid back to Investor.</description>
        <label>Principal Amount Paid Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__SS_Service_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>On this rate service charge will be charged to the investors for servicing loans, making Note payments and maintaining the accounts.
The service charge paid by investors is on all amounts paid by the borrowers.</description>
        <label>Service Rate Snapshot</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__SS_Share__c</fullName>
        <description>Describes the percent share of Investor in Loan amount</description>
        <label>Share Snapshot</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__SS_Status__c</fullName>
        <description>Describes whether the record is in Active or Inactive state</description>
        <label>Status Snapshot</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De-Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__SS_Total_Amount_Paid__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total Amount paid back to Investor</description>
        <label>Total Amount Paid Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Sent_To_ACH_On__c</fullName>
        <inlineHelpText>This is the date the transaction was sent to ACH. The lock period for clearing is counted from this date.</inlineHelpText>
        <label>Sent To ACH On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Sent_to_ACH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to ACH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Total_Service_Charge__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Total Service Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Txn_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Txn_Code__c</fullName>
        <label>Transaction Code</label>
        <picklist>
            <picklistValues>
                <fullName>ACTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CERTIFICATE RATE CHANGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAYMENT APPROVAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE RATE CHANGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE-ACTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAYMENT RELEASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAYMENT REVERSED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRINCIPAL REINVESTED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTEREST REINVESTED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRINCIPAL &amp; INTEREST REINVESTED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHARGE OFF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Txn_Description__c</fullName>
        <label>Transaction Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Vat__c</fullName>
        <defaultValue>0</defaultValue>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Write_Off_Recovery_Payment__c</fullName>
        <formula>loan__Loan_Payment_Transaction__r.loan__Write_Off_Recovery_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Write Off Recovery Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__FFA_Journal_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FFA Journal Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Service_Fee_Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Fee Journal</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Investor Loan Transactions</relationshipLabel>
        <relationshipName>Investor_Loan_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Service_Fee_Reversal_Journal_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Fee Reversal Journal Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Service_Fee_Reversal_Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Fee Reversal Journal</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Investor Loan Transactions (Service Fee Reversal Journal)</relationshipLabel>
        <relationshipName>Investor_Loan_Transactions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Tax_Journal_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Journal Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Tax_Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Journal</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Investor Loan Transactions (Tax Journal)</relationshipLabel>
        <relationshipName>Investor_Loan_Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Tax_Reversal_Journal_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Reversal Journal Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Tax_Reversal_Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Reversal Journal</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Investor Loan Transactions (Tax Reversal Journal)</relationshipLabel>
        <relationshipName>Investor_Loan_Transactions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Investment_Order_Post_Sale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the new investment order that is created when the current investment order is sold. Typically the new investment order will belong to a different Account and old investment order will drop in value.</inlineHelpText>
        <label>Investment Order Post Sale</label>
        <referenceTo>loan__Investor_Loan__c</referenceTo>
        <relationshipLabel>Investor Loan Transactions (Investment Order Post Sale)</relationshipLabel>
        <relationshipName>Investor_Loan_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Number_of_Shares_Sold__c</fullName>
        <label>Number of Shares Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Sale_Fee__c</fullName>
        <label>Sale Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Sale_Price_Per_Share__c</fullName>
        <label>Sale Price Per Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Sale_Price__c</fullName>
        <formula>peer__Number_of_Shares_Sold__c * peer__Sale_Price_Per_Share__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__VAT_On_Service_Charge__c</fullName>
        <defaultValue>0</defaultValue>
        <description>VAT platform is liable to pay.</description>
        <label>VAT On Service Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Investor Loan Transaction</label>
    <nameField>
        <displayFormat>ILTID-{0000000000}</displayFormat>
        <label>Investor Loan Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investor Loan Transactions</pluralLabel>
    <recordTypes>
        <fullName>loan__Active</fullName>
        <active>true</active>
        <description>Record type for Active Transaction Code.</description>
        <label>Active</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Certificate_Rate_Changed</fullName>
        <active>true</active>
        <label>Certificate Rate Changed</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__IO_Deactivated</fullName>
        <active>true</active>
        <description>Investment Order Deactivation</description>
        <label>IO Deactivated</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Interest_Invested_Principal_Returned</fullName>
        <active>true</active>
        <description>Record type for INTEREST REINVESTED Transaction Code.</description>
        <label>Interest Invested Principal Returned</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Investor_Payment_Reversed</fullName>
        <active>true</active>
        <label>Investor Payment Reversed</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Payment_Due</fullName>
        <active>true</active>
        <description>Record type for &apos;PAYMENT APPROVAL&apos; transaction code.</description>
        <label>Payment Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Payment_Paid</fullName>
        <active>true</active>
        <description>Record type for &apos;PAYMENT RELEASE&apos; Transaction Code.</description>
        <label>Payment Release</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Principal_Interest_Invested</fullName>
        <active>true</active>
        <description>Record type for PRINCIPAL &amp; INTEREST REINVESTED Transaction Code.</description>
        <label>Principal-Interest Invested</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Principal_Invested_Interest_Returned</fullName>
        <active>true</active>
        <description>Record type for &apos;PRINCIPAL REINVESTED&apos; Transaction Code.</description>
        <label>Principal Invested Interest Returned</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Service_Rate_Changed</fullName>
        <active>true</active>
        <label>Service Rate Changed</label>
    </recordTypes>
    <recordTypes>
        <fullName>loan__Write_Off</fullName>
        <active>true</active>
        <label>Write Off</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>